<resources>
    <string name="app_name">UniShop</string>
    <string name="password_by_in">Parol bilan kirish</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="pin_kodni_kiriting">Pin kodni kiriting</string>
    <string name="default_product_counter">2 product</string>
    <string name="default_basket_summ">1 200 300 UZS</string>
    <string name="todo">TODO</string>
    <string name="products">Products</string>
    <string name="default_product_name">Lenovo</string>
    <string name="default_product_price">1 200 340 UZS</string>
    <string name="default_product_count">38 dona</string>
    <string name="add_basket">Savatga qo\'shish</string>
    <string name="default_whosale">Ulgurji:2,54 USD</string>
    <string name="default_min">Minimum:27 000 UZS</string>
    <string name="default_max">Narxi:27 000 UZS</string>
    <string name="soni">Soni</string>
    <string name="summa">Summa</string>
    <string name="default_count">38 dona</string>
    <string name="lenavo">Lenavo</string>
    <string name="next">Keyingisi</string>
    <string name="plastic">Plastik</string>
    <string name="cash">Naqd</string>
    <string name="gacha">...gacha</string>
    <string name="dan">...dan</string>
    <string name="debt">Qarzlar</string>
    <string name="default_name">Lionel Messi</string>
    <string name="default_date">06.03.2021 09:00:31</string>
    <string name="hisoblash">Hisoblash</string>
    <string name="payment_date">To’lovni amalga oshirish sanasi</string>
    <string name="search_for_client">Search for client</string>
    <string name="default_user_name">Isoqov Jamshid</string>
    <string name="sell">Sotuvalar</string>

    <string name="warehouse">Склад</string>
    <string name="clients">Клиенты</string>
    <string name="new_client">Новый клиент</string>
    <string name="sales">Продажи</string>
    <string name="new_sale">Новая продажа</string>
    <string name="new_payment">Новая оплата</string>
    <string name="full_name">Ф. И. О.</string>
    <string name="phone_number">Номер телефона</string>
    <string name="legal_person">Юридическое лицо</string>
    <string name="natural_person">Физическое лицо</string>
    <string name="tax_identification_number">ИНН</string>
    <string name="address">Адрес</string>
    <string name="comment">Комментарии</string>
    <string name="add">Добавить</string>
    <string name="enter_special_code">Введите пин-код</string>
    <string name="required_field">Обязательное поле</string>
    <string name="new_product">Новый товар</string>
    <string name="choose_client">Выберите клиента</string>
    <string name="sum_uzb">Сумма</string>
    <string name="date_uzb">Дата</string>
    <string name="selected_sum">Ввести</string>
    <string name="cash_cost">Наличные</string>
    <string name="card_cost">Пластик</string>
    <string name="method_uzb">Способ оплаты</string>
    <string name="cash_uzb">Наличные</string>
    <string name="uzcard">Пластик карта</string>
    <string name="mix">Смешанный</string>
    <string name="cancel_uzb">Отменить</string>
    <string name="done_uzb">Выбрать</string>
    <string name="close">Закрыть</string>
    <string name="search">Поиск</string>
    <string name="count_text">%s штук</string>
    <string name="by_product_name">По названию товара</string>
    <string name="by_category">По категории</string>
    <string name="by_remain">По остатке</string>
    <string name="by_ascend">По возрастанию</string>
    <string name="by_descend">По убыванию</string>
    <string name="by_few_remain">По минимум</string>
    <string name="payment_cash">Наличные</string>
    <string name="payment_card">Карта</string>
    <string name="choose_category">Выберите категорию</string>
    <string name="product_name">Название товара</string>
    <string name="brand_name">Производитель</string>
    <string name="cost_price">Себестоимость</string>
    <string name="wholesale_price">Оптовоя цена</string>
    <string name="min_price">Минимальная цена</string>
    <string name="max_price">Максимальная цена</string>
    <string name="add_new_product">Добавить товар</string>
    <string name="new_category">Новая категория</string>
    <string name="add_new_category">Добавить категорию</string>
    <string name="wholesale_percent">Оптовый процент</string>
    <string name="max_percent">Максимум процент</string>
    <string name="min_percent">Минимум процент</string>
    <string name="category_name">Название категории</string>
    <string name="min_quantity">Минимальное количество</string>
    <string name="min_quantity_hint">Продукция, относящаяся к данной категории на складе, считается мало оставшейся, если она меньше этого количества</string>
    <string name="search_client_hint">Вы можете искать клиента по имени</string>
    <string name="add_payment">Добавить оплату</string>
    <string name="choose_payment_method">Выберите способ оплаты</string>
    <string name="new_pin_code">Получить новый код</string>
    <string name="basket">Корзинка</string>
    <string name="fill_the_fields">Заполните поля</string>
    <string name="wrong_pincode">Неверный пин-код!</string>
    <string name="input_sum">Введите сумму!</string>
    <string name="input_sum_and_date">Введите сумму и дату</string>
    <string name="success">Успешно!</string>
    <string name="order_successfully_done">Заказ выполнен успешно!</string>
    <string name="client_successfully_added">Клиент добавлен успешно!</string>
    <string name="product_quantity">Количество товара</string>
    <string name="type_of_client">Тип личности</string>
    <string name="payment">Оплата</string>
    <string name="cash_pay_helper">Введите стоимость, оплаченную наличными</string>
    <string name="card_pay_helper">Введите стоимость, оплаченную через пластиковую карту</string>
    <string name="payment_debt">Долг</string>
    <string name="debt_pay_helper">Введите одолженную сумму денег</string>
    <string name="debt_pay_date_helper">Срок погашения долга (если остался долг)</string>
    <string name="payment_mix">Смешанный</string>
    <string name="add_to_basket">Добавить в корзинку</string>
    <string name="wholesale_price_text">Оптовая: %s USD</string>
    <string name="min_price_text">Минимум: %s UZS</string>
    <string name="max_price_text">Цена: %s UZS</string>
    <string name="quantity">Количество</string>
    <string name="pay">Оплатить</string>
    <string name="not_enough_error">Недостаточно продукта!</string>
    <string name="confirm_order">Выполнить заказ</string>
    <string name="total_sum_text">Сумма: %s UZS</string>
    <string name="input_correct_info">Введите действительный данный</string>
    <string name="basket_empty_warning">Сначала добавьте товар в корзину!</string>
    <string name="choose_date_uz">Выберите дату</string>
    <string name="product_added_successfully">Продукт добавлен успешно!</string>
    <string name="product_quantity_helper">В каком количестве из этого продукта добавить на склад</string>
    <string name="set_duration">Укажите срок</string>
    <string name="today">Сегодня</string>
    <string name="start_date">От...</string>
    <string name="end_date">До...</string>
    <string name="calculate">Рассчитать</string>
    <string name="remove_uz">Удалить</string>
    <string name="confirm_remove_uz">Вы действительно хотите удалить этот товар из корзины?</string>
    <string name="finance">Финанс</string>
    <string name="expenses_dto">Расходы</string>
    <string name="expense_any">Другие</string>
    <string name="expense_administrative">Административные расходы</string>
    <string name="expense_rent">Аренда</string>
    <string name="expense_salary">Зарплата</string>
    <string name="expense_investments">Инвестиции</string>
    <string name="expense_office">Канцтовар</string>
    <string name="expense_taxes">Налоги</string>
    <string name="expense_household">Хозяйственные расходы</string>
    <string name="expense_any_short">Др</string>
    <string name="expense_administrative_short">Адм\nрас</string>
    <string name="expense_rent_short">Арен\nда</string>
    <string name="expense_salary_short">Зар\nпл</string>
    <string name="expense_investments_short">Инв\nест</string>
    <string name="expense_office_short">Офис</string>
    <string name="expense_taxes_short">На\nлог</string>
    <string name="expense_household_short">Хоз\nрас</string>
    <string name="new_expense">Новый расход</string>
    <string name="description">Название</string>
    <string name="category">Категория</string>
    <string name="payee">Получатель</string>
    <string name="add_expense">Добавить расход</string>
    <string name="not_selected">Не выбрано</string>
    <string name="payer">Плательщик</string>
    <string name="add_income">Добавить доход</string>
    <string name="incomes">Доходы</string>
    <string name="cashbox_title">Касса</string>
    <string name="total_debt_text">Долг: %s UZS</string>
    <string name="natural_person_short">Ф</string>
    <string name="legal_person_short">Ю</string>
    <string name="category_added_successfully">Категория добавлено успешно!</string>
    <string name="choose_payment_type">Выберите способ оплаты</string>
    <string name="choose_client_and_fill_payment">Пожалуйста выберите клиента и введите оплату полностью</string>
    <string name="payment_successfully">Оплачено!</string>
    <string name="count">штук</string>
    <string name="lang_name">Русский</string>
    <string name="sum_of_sale">Сумма продажи:</string>
    <string name="yes">Да</string>
    <string name="error">Ошибка!</string>
    <string name="purchases">Покупки</string>
    <string name="payments">Платежи</string>
    <string name="transaction">Транзакция</string>
    <string name="transaction_successful">Транзакция выполнено успешно!</string>
    <string name="choose_range">Выберите диапазон</string>
    <string name="profit_title">Прибыль</string>
    <string name="err_valid_sum">Введите корректную сумму</string>
    <string name="warning">Вы уверены?</string>
    <string name="reports">Отчеты</string>
    <string name="default_month">март\n2022 г.</string>
    <string name="balance">Чистая прибыль</string>
    <string name="salawat">Salawat</string>
    <string name="search_for_product">Search for product</string>
    <string name="expire_date">Expire date</string>
</resources>