<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/margin_standard"
    android:background="@color/root_color">

    <ImageView
        android:id="@+id/img_income"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="@dimen/margin_standard"
        android:src="@drawable/ic_inword"
        android:contentDescription="@string/todo" />
    <TextView
        android:id="@+id/tv_product_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginStart="@dimen/margin_standard"
        android:textStyle="bold"
        android:layout_toEndOf="@id/img_income"
        android:text="@string/default_user_name"/>
    <TextView
        android:id="@+id/tv_product_date"
        android:layout_below="@id/tv_product_name"
        android:layout_alignStart="@id/tv_product_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_date"/>

    <View
        android:layout_below="@id/tv_product_date"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/margin_bigger"
        android:layout_marginStart="@dimen/margin_bigger"
        android:layout_marginEnd="@dimen/margin_bigger"
        android:background="@color/hint"/>

</RelativeLayout>