<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_small"
    android:background="@drawable/category_bg"
    android:backgroundTint="@color/black"
    android:paddingBottom="@dimen/margin_standard">

    <TextView
        android:id="@+id/tv_new_client"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/margin_standard"
        android:text="@string/new_client"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ed_client_name"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="@dimen/margin_standard"
        android:backgroundTint="@color/green"
        android:hint="@string/full_name"
        android:inputType="text"
        android:textColorHint="@color/hint"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_new_client"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/ed_client_phone_number"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="@dimen/margin_standard"
        android:backgroundTint="@color/green"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:maxLength="16"
        android:textColorHint="@color/hint"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_client_name"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/ed_client_comment"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="@dimen/margin_standard"
        android:backgroundTint="@color/green"
        android:hint="@string/comment"
        android:inputType="text"
        android:maxLength="16"
        android:minWidth="350dp"
        android:textColorHint="@color/hint"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/ed_client_phone_number"
        tools:ignore="Autofill" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_add_client"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_standard"
        android:background="@drawable/sign_in_btn_bg"
        android:text="@string/add"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_client_comment" />

</androidx.constraintlayout.widget.ConstraintLayout>