<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/root_bg"
    android:orientation="vertical"
    android:paddingStart="@dimen/margin_standard"
    android:paddingEnd="@dimen/margin_standard"
    tools:context=".presentation.feature_main.feature_products.fragment_add_product.AddProductFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:padding="@dimen/margin_standard"
            android:src="@drawable/ic_back"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/new_product"
            android:textSize="18sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_standard"
        android:gravity="center_vertical">


        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/actv_category"
            style="@style/Widget.AppCompat.Light.DropDownItem.Spinner"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:backgroundTint="@color/green"
            android:popupBackground="@drawable/spinner_popup_bg"
            android:textColor="@color/white" />

        <ImageView
            android:id="@+id/add_category"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="@dimen/margin_standard"
            android:src="@drawable/add_category" />
    </LinearLayout>


    <EditText
        android:id="@+id/ed_product_name"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="@dimen/margin_standard"
        android:layout_marginTop="@dimen/margin_standard"
        android:layout_marginEnd="@dimen/margin_standard"
        android:layout_marginBottom="@dimen/margin_standard"
        android:backgroundTint="@color/green"
        android:hint="@string/product_name"
        android:inputType="text"
        android:textColorHint="@color/white"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/ed_product_quantity"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="@dimen/margin_standard"
        android:layout_marginTop="@dimen/margin_standard"
        android:layout_marginEnd="@dimen/margin_standard"
        android:layout_marginBottom="@dimen/margin_standard"
        android:backgroundTint="@color/green"
        android:hint="@string/count"
        android:inputType="number"
        android:textColorHint="@color/white"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/ed_product_brand"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="@dimen/margin_standard"
        android:layout_marginTop="@dimen/margin_standard"
        android:layout_marginEnd="@dimen/margin_standard"
        android:layout_marginBottom="@dimen/margin_standard"
        android:backgroundTint="@color/green"
        android:hint="@string/brand_name"
        android:textColorHint="@color/white"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/ed_product_price"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="@dimen/margin_standard"
        android:layout_marginTop="@dimen/margin_standard"
        android:layout_marginEnd="@dimen/margin_standard"
        android:layout_marginBottom="@dimen/margin_standard"
        android:backgroundTint="@color/green"
        android:hint="@string/wholesale_price"
        android:inputType="number"
        android:textColorHint="@color/white"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/ed_product_minimum_prices"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="@dimen/margin_standard"
        android:layout_marginTop="@dimen/margin_standard"
        android:layout_marginEnd="@dimen/margin_standard"
        android:layout_marginBottom="@dimen/margin_standard"
        android:backgroundTint="@color/green"
        android:hint="@string/min_price"
        android:inputType="number"
        android:textColorHint="@color/white"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/ed_product_maximum_prices"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="@dimen/margin_standard"
        android:layout_marginTop="@dimen/margin_standard"
        android:layout_marginEnd="@dimen/margin_standard"
        android:layout_marginBottom="@dimen/margin_standard"
        android:backgroundTint="@color/green"
        android:hint="@string/max_price"
        android:inputType="number"
        android:textColorHint="@color/white"
        android:textSize="14sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_add_new_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/margin_bigger"
            android:background="@drawable/sign_in_btn_bg"
            android:paddingStart="@dimen/margin_bigger"
            android:paddingEnd="@dimen/margin_bigger"
            android:text="@string/add_new_product" />
    </RelativeLayout>


</LinearLayout>