<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_small"
    app:cardBackgroundColor="@color/root_color"
    app:cardCornerRadius="@dimen/margin_standart">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_small">

        <TextView
            android:id="@+id/tv_summ_payment_cash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_standart"
            android:text="@string/default_basket_summ"
            android:textColor="@color/green"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/cash_img"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:background="@drawable/circle_bg"
            android:layout_centerVertical="true"
            android:backgroundTint="#175519"
            android:padding="10dp"
            android:src="@drawable/expanses"
            app:tint="@color/green" />

        <TextView
            android:id="@+id/tv_payment_saller"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_summ_payment_cash"
            android:layout_marginStart="@dimen/margin_standart"
            android:text="@string/salawat" />

        <TextView
            android:id="@+id/tv_payment_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_payment_saller"
            android:layout_marginStart="@dimen/margin_standard"
            android:text="@string/default_date" />


    </RelativeLayout>

</androidx.cardview.widget.CardView>